<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro_nigth"
    tools:context=".maestros.activity_RegistroMaestro">

    <com.github.florent37.shapeofview.shapes.ArcView
        android:layout_width="match_parent"
        android:layout_height="@dimen/back_height"
        android:background="@color/colorPrimary"
        android:elevation="1dp"
        app:shape_arc_height="20dp"
        app:shape_arc_position="bottom">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />
        <!-- YOUR CONTENT -->

    </com.github.florent37.shapeofview.shapes.ArcView>


    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp">

        <LinearLayout
            android:id="@+id/registroMaestroEncabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="9">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btnAtrasRegisterMaestro"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:src="@drawable/ic_backbutton"
                app:srcCompat="@drawable/ic_backbutton"
                app:theme="@style/btnAtras"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/txtRegistro"
                android:textColor="@android:color/white"
                android:textSize="@dimen/lbl_titulo"
                android:textStyle="bold" />

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/FotoPerfil"
            android:layout_width="@dimen/img_width"
            android:layout_height="@dimen/img_height"
            android:layout_below="@id/registroMaestroEncabezado"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTopImgLogo"
            android:contentDescription="@string/imgDescripction"
            android:elevation="3dp"
            android:src="@drawable/ic_user"
            tools:ignore="VectorDrawableCompat"
            tools:srcCompat="@drawable/ic_user" />

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/btnSelecccionarImagen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/FotoPerfil"
            android:layout_alignBottom="@+id/FotoPerfil"
            android:elevation="3dp"
            android:src="@drawable/ic_add"
            app:civ_circle_background_color="@color/white"
            app:srcCompat="@drawable/ic_add"
            tools:ignore="VectorDrawableCompat" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/formRegistromarginBottom"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/txtMaestroIdLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_heigth"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtMaestroId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/fontZize_txtInput"
                android:hint="@string/id_institucional"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColorHighlight="#FFFFFF"
                android:textColorLink="@color/colorSecondary"
                android:textCursorDrawable="@color/colorSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/txtMaestroNombreLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_heigth"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/ic_baseline_perm_identity_24">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtMaestroNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/fontZize_txtInput"

                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColorHighlight="#FFFFFF"
                android:textColorLink="@color/colorSecondary"
                android:textCursorDrawable="@color/colorSecondary"
               />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/txtMaestroEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_heigth"
            app:hintTextColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtMaestroEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/fontZize_txtInput"

                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textAllCaps="false"
                android:textColorHighlight="#FFFFFF"
                app:endIconMode="clear_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtRegistroMaestroPass1Layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_heigth"
            app:startIconDrawable="@drawable/ic_lock"
            app:hintTextColor="@color/colorSecondary"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtRegistroMaestroPass1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/fontZize_txtInput"

                android:hint="@string/txtpassword"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtRegistroMaestroPass2Layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_heigth"
            app:hintTextColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/ic_lock"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtRegistroMaestroPass2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/fontZize_txtInput"
                android:hint="@string/txtpasswordConfirm"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:padding="5dp">

        <Button
            android:id="@+id/btnMaestroRegistro"
            style="@style/boton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/boton_height"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/btnRegistrar"
            android:textColorLink="@color/white"
            app:backgroundTint="@color/colorSecondary" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>