<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro_nigth"
    android:fitsSystemWindows="true"
    tools:context=".Padres.activity_registro_padre">

    <com.github.florent37.shapeofview.shapes.ArcView
        android:layout_width="match_parent"
        android:layout_height="@dimen/back_height"
        android:background="@color/colorSecondary"
        android:elevation="1dp"
        app:shape_arc_height="20dp"
        app:shape_arc_position="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSecondaryDark"
            android:elevation="1dp" />
        <!-- YOUR CONTENT -->

    </com.github.florent37.shapeofview.shapes.ArcView>

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btnAtrasRegisterPadre"
            android:layout_width="@dimen/btn_seleccionarimg"
            android:layout_height="@dimen/btn_seleccionarimg"
            android:layout_marginLeft="@dimen/GeneralMargin"
            android:layout_marginTop="@dimen/GeneralMargin"
            android:src="@drawable/ic_backbutton"
            app:theme="@style/btnAtras"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/txtRegistro"
            android:textColor="@android:color/white"
            android:textSize="@dimen/lbl_titulo"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/FotoPerfilPadre"
            android:layout_width="@dimen/img_width"
            android:layout_height="@dimen/img_height"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:elevation="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user"
            app:civ_circle_background_color="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_user"
            tools:ignore="VectorDrawableCompat" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btnPadreSelecccionarImagen"
            android:layout_width="@dimen/btn_seleccionarimg"
            android:layout_height="@dimen/btn_seleccionarimg"
            android:layout_alignEnd="@+id/FotoPerfilPadre"
            android:layout_alignRight="@+id/FotoPerfilPadre"
            android:layout_alignBottom="@+id/FotoPerfilPadre"
            android:elevation="3dp"
            android:src="@drawable/ic_add"
            app:civ_circle_background_color="@color/white"
            tools:ignore="VectorDrawableCompat" />


    </RelativeLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/formRegistromarginBottom"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtIdPadreLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtIdPadre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_institucional"
                android:inputType="text"
                android:maxLines="1"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_inputs" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtNombrePadreLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/ic_baseline_perm_identity_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombrePadre"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_inputs" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmailPadreLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailPadre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_inputs" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPass1PadreLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_inputs"
            app:hintTextColor="@color/colorSecondary"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass1Padre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtpassword"
                android:inputType="textPassword"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_inputs" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPass2PadreLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintTextColor="@color/colorSecondary"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass2Padre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtpasswordConfirm"
                android:inputType="textPassword"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_inputs" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistroRegistrarPadre"
        style="@style/boton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/boton_height"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="32dp"
        android:text="@string/btnRegistrar"
        android:textColorLink="@color/white"
        app:backgroundTint="@color/colorSecondary" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>